--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
             <td>@user.Gender</td>
             <td>@user.Address</td>
             <td>
-                <a href="@Url.Action("Update", "Home", new { id = user.ID })" class="btn btn-primary">Edit</a>
+                <a href="@Url.Action("Edit", "Home", new { id = user.ID })" class="btn btn-primary">Edit</a>
             </td>
             <td>
                 <a href="@Url.Action("Delete","Home",new {id = user.ID})" class="btn btn-danger">Delete</a>
