--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,6 +12,8 @@
         <th>Phone No</th>
         <th>Gender</th>
         <th>Address</th>
+        <th>Action</th>
+
     </tr>
 
     @foreach (var user in Model)
@@ -23,12 +25,9 @@
             <td>@user.Gender</td>
             <td>@user.Address</td>
             <td>
-                <a href="@Url.Action("Edit", "Home", new { id = user.ID })" class="btn btn-primary">Edit</a>
+                <a href="@Url.Action("Edit", "Home", new { id = user.ID })" class="btn btn-sm btn-primary me-2" onclick="return confirm('Are you sure you want to update this user?');">Edit</a>
+                <a href="@Url.Action("Delete","Home",new {id = user.ID})" class="btn btn-sm btn-danger" onclick="return confirm('Are you sure you want to delete this user?');">Delete</a>
             </td>
-            <td>
-                <a href="@Url.Action("Delete","Home",new {id = user.ID})" class="btn btn-danger">Delete</a>
-            </td>
-            
         </tr>
     }
 </table>
