--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
         <th>Phone No</th>
         <th>Gender</th>
         <th>Address</th>
+        <th>Designation</th>
         <th>Action</th>
 
     </tr>
@@ -24,6 +25,7 @@
             <td>@user.Phone</td>
             <td>@user.Gender</td>
             <td>@user.Address</td>
+            <td>@user.Designation</td>
             <td>
                 <a href="@Url.Action("Edit", "Home", new { id = user.ID })" class="btn btn-sm btn-primary me-2" onclick="return confirm('Are you sure you want to update this user?');">Edit</a>
                 <a href="@Url.Action("Delete","Home",new {id = user.ID})" class="btn btn-sm btn-danger" onclick="return confirm('Are you sure you want to delete this user?');">Delete</a>
